--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "daisyui": "^5.0.43",
     "firebase": "^11.9.0",
+    "framer-motion": "^12.22.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
